Bug 1337589 - Improve Get*YuvColorMatrix. - r=mattwoodrow

MozReview-Commit-ID: 1FMnRNB7ksI