gfx/layers/d3d9/CompositorD3D9.cpp
@@ -420,7 +420,7 @@ CompositorD3D9::DrawQuad(const gfx::Rect &aRect,
       }
 
 
-      float* yuvToRgb = gfxUtils::Get4x3YuvColorMatrix(ycbcrEffect->mYUVColorSpace);
+      const float* yuvToRgb = gfxUtils::YuvToRgbMatrix4x3RowMajor(ycbcrEffect->mYUVColorSpace);
       d3d9Device->SetPixelShaderConstantF(CBmYuvColorMatrix, yuvToRgb, 3);
 
       TextureSourceD3D9* sourceY  = source->GetSubSource(Y)->AsSourceD3D9();
@@ -574,7 +574,7 @@ CompositorD3D9::SetMask(const EffectChain &aEffectChain, uint32_t aMaskTexture)
   Rect bounds = Rect(Point(), Size(maskEffect->mSize));
   bounds = maskTransform.As2D().TransformBounds(bounds);
 
-  device()->SetVertexShaderConstantF(DeviceManagerD3D9::sMaskQuadRegister, 
+  device()->SetVertexShaderConstantF(DeviceManagerD3D9::sMaskQuadRegister,
                                      ShaderConstantRect(bounds.x,
                                                         bounds.y,
                                                         bounds.width,
